fix color map caret alignment

--- a/src/styles/color-field.module.css
+++ b/src/styles/color-field.module.css
@@ -21,7 +21,8 @@
     width: 100%;
     height: 20px;
     justify-content: center;
-    gap: 5px;
+    align-items: center;
+    gap: 2px;
 }
 
 .label > a svg {
